--- a/rework/style.css
+++ b/rework/style.css
@@ -1,25 +1,34 @@
-    *, *::before, *::after {
-        box-sizing: border-box;
-    }
+*, *::before, *::after {
+    box-sizing: border-box;
+}
 
-    /* remove deafault margin */
-    * {
-        margin: 0;
-        padding: 0;
-    }
+/* remove deafault margin */
+* {
+    margin: 0;
+    padding: 0;
+}
 
-    html, body {
-        height: 100%;
-        width: 100%;
-        overflow: hidden;
-    }
+html, body {
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+}
 
-    body {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
+body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
-    canvas {
-        border: solid black 2px;
-    }
+canvas {
+    border: solid black 2px;
+}
+
+.info_div {
+    display: flex;
+    flex-direction: column;
+}
+
+.num_div {
+    display: flex;
+}
