--- a/rework/style.css
+++ b/rework/style.css
@@ -18,6 +18,8 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+
+    background-color: rgb(171, 255, 138);
 }
 
 canvas {
