--- a/rework/style.css
+++ b/rework/style.css
@@ -15,11 +15,33 @@ html, body {
 }
 
 body {
+    display: grid;
+    grid-template-columns: auto 15%;
+
+    padding: 1rem;
+    background-color: rgb(185, 185, 185);
+}
+
+.viewport_section {
     display: flex;
     align-items: center;
-    justify-content: center;
+    gap: 0.5rem;
 
-    background-color: rgb(171, 255, 138);
+    height: 100%;
+    background-color: rgb(110, 110, 110);
+}
+
+.debug_view, .scene_view {
+    text-align: center;
+}
+
+.info_section {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+
+    height: 100%;
+    background-color: rgb(172, 172, 172);
 }
 
 canvas {
