log: populate scene objects list UI
The UI now correctly displays the objects that are loaded into the
scene. I want to add the ability to "select" the object by clicking on
its corresponding list UI element but the "selection" aka displaying the
gizmos is more involved and is tempting me to just implement a Pub / Sub
system for state changes. However the last time I had to do this, things
got a bit too complicated for my liking.

--- a/rework2/test.css
+++ b/rework2/test.css
@@ -63,6 +63,10 @@ ul {
     padding-inline: 0.75rem;
 }
 
+.scene-objects_list p:hover {
+    background-color: #6d6d6d;
+}
+
 .views_section {
     display: flex;
     justify-content: end;
