log: add Signals and ObjectInspector
I've gone ahead and copied three.js's method of handling UI interaction,
aka the Signals as I like it better than PubSub (at least the one I
tried on Counter). I also tested it out on ObjectInspector and it works
like a charm. Truly beautiful. Coding is fun again!

--- a/rework3/test.css
+++ b/rework3/test.css
@@ -195,7 +195,7 @@ IS THERE NO PROPERTY THAT JUST FILLS????
 
 /* Set to "" to show object's properties */
 .inspector {
-    /* display: none; */
+    display: none;
 }
 
 .models {
