--- a/rework3/test.css
+++ b/rework3/test.css
@@ -259,6 +259,9 @@ IS THERE NO PROPERTY THAT JUST FILLS????
 }
 
 .models_card__img {
+    max-width: 100px;
+    max-height: 100px;
+
     border-radius: 2px;
     transform: scaleY(-1);
 }
